# Cpp-Tests

./: BinaryGap.cpp  BinaryGap.md  Brackets.cpp  CMakeLists.txt  CoinAdjacency.cpp  Consumer.h  CyclicRotation.cpp  CyclicRotation.md  Fish.cpp  LongestQuasiConstant.cpp  MS-job.txt  OddOccurrencesInArray.cpp  OddOccurrencesInArray.cpp.2  OddOccurrencesInArray.cpp.3  OddOccurrencesInArray.cpp.4  OddOccurrencesInArray.md  Producer.h  Project.cbp  Queue.h  bip-test-client.cpp  bip-test-server.cpp  main.cpp  test2.cpp  test3.cpp  unshare.c
01-Iterations/: BinaryGap.md  CMakeLists.txt
02-Arrays/: CMakeLists.txt  CyclicRotation.md  OddOccurrencesInArray.cpp
03-Time-Complexity/: CMakeLists.md  CMakeLists.txt  FrogJmp.cpp  FrogJmp.md  PermMissingElem.cpp  PermMissingElement.cpp  PermMissingElement.md  TapeEquilibrium.cpp  TapeEquilibrium.md
04-Counting-Elements/: CMakeLists.txt  FrogRiverOne.cpp  FrogRiverOne.md  FrogRiverOne.txt  MaxCounters.cpp  MaxCounters.txt  MissingInteger.cpp  MissingInteger.md  MissingInteger.txt  PermCheck.cpp  PermCheck.md  PermCheck.txt
05-Prefix-Sums/: CMakeLists.txt  CountDiv.cpp  CountDiv.md  CountDiv.txt  GenomicRangeQuery.cpp  GenomicRangeQuery.txt  MinAvgTwoSlice.cpp  MinAvgTwoSlice.md  MinAvgTwoSlice.txt  PassingCars.cpp  PassingCars.txt  PrefixSums.cpp
06-Sorting/: CMakeLists.txt  Distinct.cpp  Distinct.md  Distinct.txt  MaxProductOfThree.cpp  MaxProductOfThree.md  MaxProductOfThree.txt  NumberOfDiscIntersections.cpp  NumberOfDiscIntersections.py  NumberOfDiscIntersections.txt  Triangle.cpp  Triangle.md  Triangle.txt
07-Stacks-and-Queues/: Brackets.md  Brackets.txt  CMakeLists.md  CMakeLists.txt  Fish.cpp  Fish.md  Fish.txt  Nesting.cpp  Nesting.md  Nesting.txt  StoneWall.md  StoneWall.txt
08-Leader/: Dominator.txt  EquiLeader.txt
09-Maximum-slice-problem/: MaxDoubleSliceSum.txt  MaxProfit.md  MaxSliceSum.txt
Unity-Test/: CMakeLists.txt  Q1.cpp  Q1.md  Q2.cpp  Q2.md  Q3.cpp  Q3.md  Q4-1.cpp  Q4-tests.cpp  Q4.cpp  Q4.md
Various/: CMakeLists.txt  NumberSolitaire.cpp  isPermutation.cpp
