add_executable(PermMissingElem PermMissingElem.cpp)
target_link_libraries(PermMissingElem gtest_main gtest)

add_executable(TapeEquilibrium TapeEquilibrium.cpp)
target_link_libraries(TapeEquilibrium gtest_main gtest)

add_executable(FrogJmp FrogJmp.cpp)
target_link_libraries(FrogJmp gtest_main gtest)
