add_executable(PrefixSums PrefixSums.cpp)
target_link_libraries(PrefixSums gtest_main gtest)

add_executable(CountDiv CountDiv.cpp)
target_link_libraries(CountDiv gtest_main gtest)

add_executable(PassingCars PassingCars.cpp)
target_link_libraries(PassingCars gtest_main gtest)

add_executable(GenomicRangeQuery GenomicRangeQuery.cpp)
target_link_libraries(GenomicRangeQuery gtest_main gtest)

add_executable(MinAvgTwoSlice MinAvgTwoSlice.cpp)
target_link_libraries(MinAvgTwoSlice gtest_main gtest)
